obj added need repairing ._.